llm blog, jamstec news blog, and superalignment blog

--- a/content/blog/2024-04-15-llm-intro.md
+++ b/content/blog/2024-04-15-llm-intro.md
@@ -6,7 +6,10 @@ tags:
   - LLM
   - generative ai
   - tutorial
+  - newsletter
 ---
+
+(This post was also published on [Good Computer](https://goodcomputer.substack.com/p/an-introduction-to-large-language).)
 
 Since the release of ChatGPT, Large Language Models (LLMs) like ChatGPT, Gemini, and Llama have become ubiquitous in our daily lives. These models generate text, code, or even images. In this post, I'll give a high-level introduction[^1] to Large Language Models, the technical details about them as well as the current challenges facing them. In future posts, I'll go into more detail about how they are being used and some of the challenges overviewed here.
 
@@ -20,7 +23,6 @@ Consider, for example, the sentence: "This cat is cute." We can give the model t
 
 This loop of using an ANN model, comparing its output to data, and adjusting the parameters is known as "learning" or "training." Training depends heavily on data to demonstrate what outputs we expect from a model. This data dependence is especially important for generative AI, where multiple good outputs often exist. For example, the final word of the sentence "This cat is cute" could also be "pretty" or "adorable." How do we encourage the model to generate these diverse, yet sensible, responses while avoiding nonsensical ones like "This cat is sandwich"?
 
-[![GPT next token prediction](http://jalammar.github.io/images/xlnet/gpt-2-autoregression-2.gif)](http://jalammar.github.io/illustrated-gpt2/)
 
 The specific ANN architecture behind LLMs is called a "Transformer" architecture. The modern transformer architecture was [developed in 2017](https://proceedings.neurips.cc/paper/2017/file/3f5ee243547dee91fbd053c1c4a845aa-Paper.pdf) and transforms one data sequence into another. A sequence can be, for example, a sentence or multiple sentences. LLMs use an "[attention](https://arxiv.org/pdf/1409.0473.pdf)" mechanism to identify the most crucial parts of the input sequence. For instance, to predict "cute" in "This cat is cute," the model focuses on "cat" more than "this" or "is." This allows transformers to handle large amounts of context without internal memory, relying instead on a large input sequence.
 
@@ -30,7 +32,6 @@ An important characteristic of LLMs is that they are "large" – much larger tha
 
 The standard training approach for LLMs is [next token prediction](https://onlinelibrary.wiley.com/doi/pdf/10.1002/j.1538-7305.1951.tb01366.x): giving the model most of a sentence and using it to predict the next word. Using the example of "This cat is", the model is asked using next-token prediction to predict "cute," the next token. LLMs operate on "tokens" instead of words, to take characters and word segments into account. A token might be a word, a part of a word, a punctuation mark, a word with a space before it, a word with a suffix. The "vocabulary" of a model is the set of all possible tokens it can generate; the vocabulary of GPT2 and GPT3 is 50257 tokens, ranging from logical ones like "The" to surprising ones like "[davidjil](https://simonwillison.net/2023/Jun/8/gpt-tokenizers/)".
 
-[![Tokenization of the sentence "This cat is cute."](/images/tokens.png)](/images/tokens.png)
 
 To train these giant models on next-token prediction, AI companies like OpenAI turned to the vast public internet. [Datasets of sentences were gathered](https://www.nytimes.com/2024/04/06/technology/tech-giants-harvest-data-artificial-intelligence.html), with GPT-3 having a training set of over 500 billion tokens. To give an idea of the size, all of Wikipedia is only 3 billion tokens out of the 500 billion. The large size of these datasets and the language models trained on them is a recent development in AI.
 
@@ -42,7 +43,6 @@ One of the largest and inherent issues in language models is bias. Bias is what 
 
 The data used to train these models comes from the public internet, so it contains biases that are prevalent on the internet. Gender stereotypes and cultural prejudices seep into the model's predictions, leading to biased outputs. For example, a model trained on internet data will predict that [a farmer is male and a nurse is female](https://proceedings.neurips.cc/paper/2020/file/92650b2e92217715fe312e6fa7b90d82-Paper.pdf).
 
-[![Graph demonstrating LLM bias](/images/bias.png)](https://uclanlp.github.io/corefBias/overview) 
 
 To mitigate bias, the commonly used method is [reinforcement learning with human feedback](https://en.wikipedia.org/wiki/Reinforcement_learning_from_human_feedback), where human annotations of generated text are used to determine when a response is appropriate or not. However, as witnessed recently with [Google's Gemini model](https://www.wired.com/story/google-gemini-woke-ai-image-generation/), aligning generative AI with human values means defining a specific set of values. What is considered good or appropriate varies across cultures and individuals, making it difficult to establish a universal standard. As [Irene Solaiman](https://www.irenesolaiman.com/) has said, "bias can never be fully solved as an engineering problem... Bias is a systemic problem."
 
@@ -52,7 +52,6 @@ Another critical issue is the ability of LLMs to generate text which is false, w
 
 For instance, [Google's announcement](https://www.theverge.com/2023/2/8/23590864/google-ai-chatbot-bard-mistake-error-exoplanet-demo) of their Bard model contained an erroneous claim about the first image of an exoplanet ever taken. A simple Google search shows that the real first image was from 20 years ago, not recently as was claimed in the generated text.
 
-[![Hallucinations about actress](/images/hallucinations.png)](https://arxiv.org/pdf/2305.14251.pdf)
 
 While efforts like tying generated content to verified sources are being studied, fully resolving this issue remains challenging and [it isn't clear if it's even possible](https://twitter.com/ylecun/status/1629488660071448578). The most common solution currently is [Retrieval-Augmented Generation](https://proceedings.neurips.cc/paper/2020/file/6b493230205f780e1bc26945df7481e5-Paper.pdf) (RAG), which combines an LLM with a retrieval model to ensure that the generated text is based on verified sources. While RAG has shown promise in reducing hallucinations, [state-of-the-art](https://openreview.net/pdf?id=hSyW5go0v8) RAG methods show that there is still much work to be done.
 
