personal announcement backlog

--- a/content/blog/2024-05-22-jamstec.md
+++ b/content/blog/2024-05-22-jamstec.md
@@ -3,8 +3,8 @@ title: Visit to JAMSTEC
 author: Dennis G. Wilson
 date: '2024-05-22'
 tags:
-  oceanography
-  personal
+  - oceanography
+  - personal
 ---
 
 This summer, I have the chance to be working at the [Japan Agency for Marine-Earth Science and Technology (JAMSTEC)](https://www.jamstec.go.jp/), a world-renowned research institute that conducts research in marine science, oceanography, and earth science. I'm working in the [Application Laboratory](https://www.jamstec.go.jp/al/), where I'm researching the application of AI to modeling ocean dynamics and climate change.
